--- a/TypeScript-Estudos/Model-ts/package.json
+++ b/TypeScript-Estudos/Model-ts/package.json
@@ -26,6 +26,7 @@
     "prettier": "^2.3.2",
     "ts-loader": "^8.0.1",
     "ts-node": "^8.10.2",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^3.9.7",
     "webpack": "^5.45.1",
     "webpack-cli": "^3.3.12"
