--- a/TypeScript-Estudos/TypesTS/package.json
+++ b/TypeScript-Estudos/TypesTS/package.json
@@ -15,14 +15,18 @@
     "@types/lodash": "^4.14.157",
     "@types/node": "^14.0.23",
     "@types/validator": "^13.1.0",
-    "@typescript-eslint/eslint-plugin": "^3.6.1",
-    "@typescript-eslint/parser": "^3.6.1",
-    "eslint": "^7.5.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.0.5",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.31.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "^2.3.2",
     "ts-loader": "^8.0.1",
     "ts-node": "^8.10.2",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^3.9.7",
     "webpack": "^5.45.1",
     "webpack-cli": "^3.3.12"
