--- a/TypeScript-Estudos/Model-ts/package.json
+++ b/TypeScript-Estudos/Model-ts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cursojstypescript",
+  "name": "ModelTS",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -26,7 +26,6 @@
     "prettier": "^2.3.2",
     "ts-loader": "^8.0.1",
     "ts-node": "^8.10.2",
-    "ts-node-dev": "^1.1.8",
     "typescript": "^3.9.7",
     "webpack": "^5.45.1",
     "webpack-cli": "^3.3.12"
