--- a/TypeScript-Estudos/TypesTS/.vscode/settings.json
+++ b/TypeScript-Estudos/TypesTS/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
-  "editor.fontSize": 20,
+  "editor.fontSize": 12,
   "window.zoomLevel": 1,
   "code-runner.executorMap": {
-    "typescript": "clear && npx ts-node --files --transpile-only",
+    "typescript": "cls && npx ts-node --files --transpile-only",
   },
-  "liveServer.settings.port": 5501
+  "liveServer.settings.port": 5501,
+  
 }
