--- a/TypeScript-Estudos/TypesTS/.eslintrc.json
+++ b/TypeScript-Estudos/TypesTS/.eslintrc.json
@@ -19,6 +19,7 @@
     "rules": {
       "prettier/prettier": "error",
       "no-unused-vars": 0,
-      "no-shadow": 0
+      "no-shadow": 0,
+      "no-console": 0
     }
 }
