--- a/TypeScript-Estudos/TypesTS/.eslintrc.json
+++ b/TypeScript-Estudos/TypesTS/.eslintrc.json
@@ -23,6 +23,7 @@
       "no-console": 0,
       "no-restricted-syntax": 0,
       "guard-for-in": 0,
+      "no-use-before-define":"off",
       "prefer-const": "off"
     }
 }
