--- a/TypeScript-Estudos/ClassAndInterfacesTS/.eslintrc.json
+++ b/TypeScript-Estudos/ClassAndInterfacesTS/.eslintrc.json
@@ -23,6 +23,7 @@
       "no-useless-constructor":"off",
       "no-unused-vars":"off",
       "no-empty-function":"off",
-      "no-console":"off"
+      "no-console":"off",
+      "import/prefer-default-export":"off"
     }
 }
