--- a/TypeScript-Estudos/ClassAndInterfacesTS/.eslintrc.json
+++ b/TypeScript-Estudos/ClassAndInterfacesTS/.eslintrc.json
@@ -24,6 +24,7 @@
       "no-unused-vars":"off",
       "no-empty-function":"off",
       "no-console":"off",
-      "import/prefer-default-export":"off"
+      "import/prefer-default-export":"off",
+      "no-underscore-dangle":"off"
     }
 }
