--- a/TypeScript-Estudos/ClassAndInterfacesTS/.eslintrc.json
+++ b/TypeScript-Estudos/ClassAndInterfacesTS/.eslintrc.json
@@ -25,6 +25,7 @@
       "no-empty-function":"off",
       "no-console":"off",
       "import/prefer-default-export":"off",
-      "no-underscore-dangle":"off"
+      "no-underscore-dangle":"off",
+      "class-methods-use-this":"off"
     }
 }
