--- a/TypeScript-Estudos/ClassAndInterfacesTS/.eslintrc.json
+++ b/TypeScript-Estudos/ClassAndInterfacesTS/.eslintrc.json
@@ -26,6 +26,7 @@
       "no-console":"off",
       "import/prefer-default-export":"off",
       "no-underscore-dangle":"off",
-      "class-methods-use-this":"off"
+      "class-methods-use-this":"off",
+      "no-restricted-syntax":"off"
     }
 }
