--- a/TypeScript-Estudos/TypesTS/.eslintrc.json
+++ b/TypeScript-Estudos/TypesTS/.eslintrc.json
@@ -24,6 +24,8 @@
       "no-restricted-syntax": 0,
       "guard-for-in": 0,
       "no-use-before-define":"off",
-      "prefer-const": "off"
+      "prefer-const": "off",
+      "no-useless-constructor":"off",
+      "no-empty-function":"off"
     }
 }
