--- a/TypeScript-Estudos/TypesTS/.eslintrc.json
+++ b/TypeScript-Estudos/TypesTS/.eslintrc.json
@@ -26,6 +26,7 @@
       "no-use-before-define":"off",
       "prefer-const": "off",
       "no-useless-constructor":"off",
-      "no-empty-function":"off"
+      "no-empty-function":"off",
+      "max-classes-per-file": "off"
     }
 }
