--- a/TypeScript-Estudos/TypesTS/.eslintrc.json
+++ b/TypeScript-Estudos/TypesTS/.eslintrc.json
@@ -27,6 +27,7 @@
       "prefer-const": "off",
       "no-useless-constructor":"off",
       "no-empty-function":"off",
-      "max-classes-per-file": "off"
+      "max-classes-per-file": "off",
+      "no-plusplus":"off"
     }
 }
