Decorators de Classes

--- a/TypeScript-Estudos/.vscode/settings.json
+++ b/TypeScript-Estudos/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
         "Programacao",
-        "bordao"
+        "Votations",
+        "bordao",
+        "votation"
     ]
 }
