Decoradores de Metodos

--- a/TypeScript-Estudos/.vscode/settings.json
+++ b/TypeScript-Estudos/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
     "cSpell.words": [
+        "Matheus",
         "Programacao",
         "Votations",
         "bordao",
+        "metodo",
         "votation"
     ]
 }
