--- a/TypeScript-Estudos/Decorators/.eslintrc.json
+++ b/TypeScript-Estudos/Decorators/.eslintrc.json
@@ -26,6 +26,7 @@
       "class-methods-use-this":"off",
       "no-unused-vars":"off",
       "no-console":"off",
-      "no-use-before-define":"off"
+      "no-use-before-define":"off",
+      "func-names":"off"
     }
 }
