--- a/next-graphql/package.json
+++ b/next-graphql/package.json
@@ -16,7 +16,8 @@
     "eslint-plugin-react": "^7.25.1",
     "next": "11.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.15.0",
