--- a/nextjs-boilerplate/.eslintrc.json
+++ b/nextjs-boilerplate/.eslintrc.json
@@ -31,7 +31,7 @@
         "react-hooks"
     ],
     "rules": {
-      "react-prop-types": "off",
+      "react/prop-types": "off",
       "react/react-in-jsx-scope": "off",
       "react-hooks/rules-of-hooks": "error",
       "react-hooks/exhaustive-deps": "warn",
