--- a/nextjs-boilerplate/package.json
+++ b/nextjs-boilerplate/package.json
@@ -15,7 +15,8 @@
     "next-pwa": "^5.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.1",
+    "webpack": "4"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.15.0",
