--- a/nextjs-graphql/package.json
+++ b/nextjs-graphql/package.json
@@ -11,9 +11,11 @@
     "test:watch": "yarn test --watch"
   },
   "dependencies": {
+    "leaflet": "^1.7.1",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-leaflet": "^3.2.1",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
@@ -21,6 +23,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@types/jest": "^27.0.1",
+    "@types/leaflet": "^1.7.5",
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/styled-components": "^5.1.14",
