--- a/nextjs-graphql/package.json
+++ b/nextjs-graphql/package.json
@@ -11,9 +11,10 @@
     "test:watch": "yarn test --watch"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.12",
     "@styled-icons/evaicons-outline": "^10.34.0",
     "graphql": "^15.5.3",
-    "graphql-request": "^3.5.0",
+    "graphql-tools": "^8.2.0",
     "leaflet": "^1.7.1",
     "next": "11.1.2",
     "react": "17.0.2",
