--- a/NodeJS/clean-node-api/package.json
+++ b/NodeJS/clean-node-api/package.json
@@ -17,9 +17,11 @@
     "jest": "^27.5.1",
     "lint-staged": "^12.3.7",
     "ts-jest": "^27.1.4",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:staged": "jest"
   }
 }
