--- a/NodeJS/clean-node-api/package.json
+++ b/NodeJS/clean-node-api/package.json
@@ -21,7 +21,7 @@
     "typescript": "^4.6.3"
   },
   "scripts": {
-    "test": "jest --passWitNoTests",
-    "test:staged": "jest --passWitNoTests"
+    "test": "jest --passWithNoTests --watch",
+    "test:staged": "jest --passWithNoTests"
   }
 }
