--- a/NodeJS/clean-node-api/.eslintrc.json
+++ b/NodeJS/clean-node-api/.eslintrc.json
@@ -2,5 +2,6 @@
     "extends": "standard-with-typescript",
     "parserOptions": {
         "project": "./tsconfig.json"
-    }
+    },
+    "rules": {}
 }
